# homegate

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  main.py  main_selenium.py  pyproject.toml  requirements.txt
migrations/: env.py
src/: database.py  models.py  telegram_bot.py
